--- a/SHModMaker/Configs/TODO.txt
+++ b/SHModMaker/Configs/TODO.txt
@@ -1,7 +1,6 @@
 ﻿TODO
 
 Weapons
-	when HAL gives me the QBthumbnail library add it to the qb/png selectors
 	Add custom txtfields
 
 Config
@@ -9,9 +8,11 @@ Config
 	??put blank.png and blank.qb into config file as byte[]s??
 
 Recipes
+	put list of crafters into recipe tab
+	get list of ingredients from stonehearth.smod and MOD
+		//including some common material tags.. perhaps store these in CONFIG??
 	get list of craftable items from MOD
 	make the add recipe button work
-	rethink recipe
 
 
 Open and Save Mod data
