--- a/SHModMaker/Configs/TODO.txt
+++ b/SHModMaker/Configs/TODO.txt
@@ -6,11 +6,6 @@ MOD tab
 	context menu.. add 'add recipe' function
 	maybe make it go away on recipe list? if not, then it will make a new blank recipe
 
-	!!! check for null on lines 495 505 517 529
-
-Flower
-	mininto not getting added to the manifest!!?
-
 Armor
 	Have Breeze take qb thumnail for the shield from the side.
 	On export if it's a shield, don't export qbf
@@ -28,6 +23,11 @@ Open and Save Mod data
 	!!Crashes is smod is opened by anouther program during export.. need to let user know that the file can't be saved
 	//Evantually import .smods?? maybe??
 	//eventually set qb setting and force qbs to comply.
+
+Help Manu
+	Add about window
+	Add how-to window
+	//?Add Help/how-to button to each tab?
 
 ADVANCED MODDING
 	//eventually let people add their own lua files.
